# csgsi

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: pr_check.yml
csgsi_be/: Cargo.toml
csgsi_be/src/: main.rs
csgsi_fe/: Cargo.toml  index.html  style.css
csgsi_fe/src/: app.rs  gsi.rs  log.rs  main.rs
csgsi_shared/: Cargo.toml
csgsi_shared/src/: lib.rs
