[package]
name = "csgsi_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
csgsi_shared = { path = "../csgsi_shared" }
futures = "0.3.28"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
