[package]
name = "csgsi_fe"
version = "0.1.0"
edition = "2021"
description = "TODO"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
console_error_panic_hook = "0.1.7"
csgsi_shared = { path = "../csgsi_shared" }
futures = "0.3.28"
regex = "1.10.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["WebSocket"] }
yew = { version="0.21", features=["csr"] }
